Added keywords and descriptions
Added keywords to existing posts.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ title: Vishwath Mohan
 subtitle: malware analysis, AI, general rambling, lots of caffeine
 author: Vishwath Mohan
 simple_search: http://google.com/search
-description:
+description: Posts on security, research, programming and projects. 
+keywords: security, malware analysis, programming, research.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
